--- a/kotlin-native/backend.native/tests/build.gradle
+++ b/kotlin-native/backend.native/tests/build.gradle
@@ -203,6 +203,7 @@ run {
     // Add regular gradle test tasks
     dependsOn(tasksOf(Test))
     dependsOn(tasksOf(CoverageTest))
+    dependsOn(tasksOf(FileCheckTest))
     dependsOn(":kotlin-native:Interop:Indexer:check")
 }
 
@@ -220,7 +221,11 @@ task sanity {
     // Add regular gradle test tasks
     dependsOn(tasksOf(Test))
     dependsOn(tasksOf(CoverageTest))
-    dependsOn(tasksOf(FileCheckTest))
+    dependsOn(tasksOf(FileCheckTest) { task ->
+        // This is watchos_arm32-specific test and it is rather wasteful to build cross dist for a single test.
+        // So let's exclude it from sanity tests.
+        task.name != "filecheck_force_arm_instruction_set"
+    })
     dependsOn(":kotlin-native:Interop:Indexer:check")
     dependsOn(":kotlin-native:Interop:StubGenerator:check")
 }
@@ -6037,6 +6042,16 @@ Task fileCheckTest(String name, Closure<FileCheckTest> configureClosure) {
 
 fileCheckTest("filecheck_smoke0") {
     annotatedSource = project.file('filecheck/smoke0.kt')
+}
+
+if (HostManager.@Companion.hostIsMac) {
+    fileCheckTest("filecheck_force_arm_instruction_set") {
+        annotatedSource = project.file('filecheck/force_arm_instruction_set.kt')
+        targetName = "watchos_arm32"
+        // Perform check after optimization pipeline because
+        // LLVM might infer attributes.
+        phaseToCheck = "BitcodeOptimization"
+    }
 }
 
 fileCheckTest("filecheck_replace_invoke_with_call") {
