Rename kt-reference module to kt-references.

--- a/settings.gradle
+++ b/settings.gradle
@@ -504,7 +504,7 @@ include ":generators:analysis-api-generator",
         ":analysis:analysis-api-impl-base",
         ":analysis:analysis-api-providers",
         ":analysis:analysis-internal-utils",
-        ":analysis:kt-reference",
+        ":analysis:kt-references",
         ":analysis:symbol-light-classes",
         ":analysis:project-structure",
         ":analysis:analysis-api-fe10",
